feat: ADR-029: Reject policy orchestration (v0.10.2):
Added the `RejectPolicy` enum, `RejectResult` envelope, and `RejectOrchestrator` registry, wiring per-call and explainer-level policies through prediction/explanation entry points while keeping `NONE` fully backward compatible. Documented usage in `docs/improvement/reject_policy_usage.md` and linked ADR-029 into the release notes.

--- a/docs/improvement/v0.10.2_plan.md
+++ b/docs/improvement/v0.10.2_plan.md
@@ -599,9 +599,9 @@ regressions, per the remediation plan.
 
 ---
 
-## 9) ADR-029 reject integration strategy (documentation decisions)
+## 9) ADR-029 reject integration strategy (documentation and implementation decisions)
 
-**Goal:** Publish the reject integration ADR decisions, capture deferred strategy/visualization questions, and document follow-up alternatives without changing runtime behavior.
+**Goal:** Publish and implement the reject integration ADR decisions, capture deferred strategy/visualization questions, and document follow-up alternatives without changing runtime behavior.
 
 **Implementation steps**
 1. Ensure ADR-029 reflects the final decisions:
@@ -609,20 +609,30 @@ regressions, per the remediation plan.
    - C3: structured wrapper/envelope for output integration (reject-aware outputs).
    - B2: internal registry for strategy extensibility.
    - D1: no visualization integration.
-2. Record open questions and alternatives for strategy extensibility (B2) and visualization so future iterations can make an informed choice.
-3. Link ADR-029 from the v0.10.2 release milestone in `RELEASE_PLAN_v1.md`.
+2. Record open questions and alternatives for Policies (A3) and strategy extensibility (B2)to make an informed choice.
+3. Publish ADR-029 to the `docs/improvement/adrs/` directory with decisions from 2.
+4. Develop an implementation plan based on ADR-029 (see below).
+5. Implement according to the plan, starting with non-breaking shims that preserve `NONE` semantics.
+6. Link ADR-029 from the v0.10.2 release milestone in `RELEASE_PLAN_v1.md`.
 
 **Decisions (resolved for v0.10.2)**
 1. Invocation model: **A3 (Policy Enum)**.
 2. Output integration: **C3 (Structured Wrapper)**.
 
 **Decisions (sequenced)**
-1. Strategy extensibility: adopt B2 (registry) only.
-2. Visualization integration: D1 (no visualization integration).
+1. Invocation model: adopt A3 (Policy Enum) only but decide on what strategies and policies to expose.
+2. Strategy extensibility: adopt B2 (registry) only.
+3. Visualization integration: D1 (no visualization integration). No further action is necessary at this point.
 
 **Open questions and alternatives (for follow-up)**
 1. **Invocation model**
-   - Define `RejectPolicy` enum members (e.g., `NONE`, `SUBMIT`).
+  - Define `RejectPolicy` enum members and initial semantics. Proposed members:
+    - `NONE` (default): no reject integration, preserve legacy behaviour.
+    - `PREDICT_AND_FLAG`: always predict; include `rejected` flag in the envelope but do not change explanation production.
+    - `EXPLAIN_ALL`: always explain all instances; include reject status.
+    - `EXPLAIN_REJECTS`: explain only rejected instances.
+    - `EXPLAIN_NON_REJECTS`: explain only non-rejected instances.
+    - `SKIP_ON_REJECT`: skip prediction/explanation for rejected instances.
 2. **Output integration**
    - Define structure of `RejectResult` envelope.
 3. **Strategy extensibility model**
@@ -634,6 +644,24 @@ regressions, per the remediation plan.
 **Verification checklist**
 - ADR-029 published with updated decisions, dates, and open questions.
 - v0.10.2 release plan references ADR-029.
+
+**Implementation plan (v0.10.2 scope)**
+
+- Add `RejectPolicy` enum to `src/calibrated_explanations/core/reject.py` with the initial members above and docstrings describing semantics.
+- Implement `RejectResult` envelope dataclass in `src/calibrated_explanations/explanations/reject.py` with fields: `prediction`, `explanation`, `rejected: bool`, `policy: RejectPolicy`, `metadata`.
+- Add `RejectOrchestrator` in `src/calibrated_explanations/core/prediction/reject_orchestrator.py` that provides a registry for strategies and an `apply_policy(...)` entry point.
+- Wire a `reject_policy: RejectPolicy = RejectPolicy.NONE` parameter into the explanation entrypoints in `core/explain/orchestrator.py` and `core/prediction/orchestrator.py`. When `policy != NONE`, delegate to `RejectOrchestrator` and return a `RejectResult`.
+- Wire a `reject_policy: RejectPolicy = RejectPolicy.NONE` parameter into the explanation entrypoints in `core/explain/orchestrator.py` and `core/prediction/orchestrator.py`. When `policy != NONE`, delegate to `RejectOrchestrator` and return a `RejectResult`.
+  - Support per-call policy selection (e.g., `explainer.explain(..., reject_policy=...)`) so invocation behavior can vary across calls on the same explainer instance.
+  - Support an explainer-level default policy settable in the explainer constructor (e.g., `CalibratedExplainer(..., default_reject_policy=...)`) or (for a `WrapCalibratedExplainer`) via `explainer.calibrate(..., default_reject_policy=...)`. Per-call `reject_policy` should override the explainer-level default.
+  - Selecting any non-`NONE` `RejectPolicy` MUST implicitly enable reject orchestration (equivalent to `reject=True`) for the affected call(s) or explainer-level default. This ensures policy-driven invocation always evaluates rejection status even when the legacy `reject` flag is `False`.
+- Register a `builtin.default` strategy preserving existing semantics and add tests that assert `NONE` preserves current behaviour.
+- Add unit tests for each policy to validate schema and semantics; add a small example notebook demonstrating common policies if scope/time permits.
+- Update user docs and release notes to document the policy enum and recommended usage patterns.
+- Update user docs and release notes to document per-call vs explainer-level policy configuration, examples for both `CalibratedExplainer` and  `WrapCalibratedExplainer`, and guidance on when to use each pattern.
+
+**Notes**
+- Implementation should prioritize non-breaking behavior: when `reject_policy` is omitted or `NONE`, call sites and return types must be identical to current behaviour.
 
 **Future direction (out of scope for v0.10.2)**
 - Define registry interfaces (selection, lifecycle hooks, telemetry).
