feat: added Interval Summary Selection
- Added `IntervalSummary` enum logic to `CalibratedExplainer`, `PredictionOrchestrator`, and `ExplainOrchestrator` to support choosing between `regularized_mean` (default), `mean`, `lower`, and `upper` for probabilistic predictions and explanations. Updated `predict_proba`, `predict_calibrated`, `explain_factual`, and `explore_alternatives` (including legacy paths) to respect the selected summary strategy.

--- a/docs/improvement/v0.10.2_plan.md
+++ b/docs/improvement/v0.10.2_plan.md
@@ -665,3 +665,18 @@ regressions, per the remediation plan.
 
 **Future direction (out of scope for v0.10.2)**
 - Define registry interfaces (selection, lifecycle hooks, telemetry).
+
+---
+
+## 10) Interval summary selection for probabilistic predictions
+
+**Goal:** Allow callers to choose how probabilistic interval bounds are summarized into a point estimate (regularized mean/default, simple mean, lower bound, or upper bound) for probabilistic predictions and explanations.
+
+**Implementation steps**
+1. Introduce an enum (similar to ADR-029’s `RejectPolicy`) that supports `REGULARIZED_MEAN`, `MEAN`, `LOWER`, and `UPPER`.
+2. Thread the selection through probabilistic prediction paths (classification and thresholded regression), ensuring it controls the predicted probability used in explanations.
+3. Preserve the current default (regularized mean) when no selection is provided.
+
+**Verification checklist**
+- Probabilistic predictions and explanations can select between regularized mean, mean, lower bound, and upper bound without changing regression median behavior.
+- Default behavior remains unchanged when no selection is configured.
