feat: ADR-030: Private Member Usage Remediation and CI Anti-Pattern Audit

--- a/docs/improvement/v0.10.2_plan.md
+++ b/docs/improvement/v0.10.2_plan.md
@@ -680,3 +680,28 @@ regressions, per the remediation plan.
 **Verification checklist**
 - Probabilistic predictions and explanations can select between regularized mean, mean, lower bound, and upper bound without changing regression median behavior.
 - Default behavior remains unchanged when no selection is configured.
+
+---
+
+## 11) Enforce Step 1 of ADR-030 test quality remediation
+
+**Goal:** Fix the 7 identified private-member usage violations in tests to achieve zero violations, and adjust CI to automatically detect and fail if new anti-patterns emerge in tests, enforcing public-contract testing per ADR-030.
+
+**Key ADR gaps to close (from ADR-030 and initial test quality report):**
+- 7 violations in `tests/unit/calibration/test_summaries.py` and `tests/unit/core/test_config_helpers.py` involving `_CacheFacadeFake`, `_ExplainerLike`, and `_orig_undo`.
+- Acceptance: `scripts/detect_test_anti_patterns.py` reports 0 private helper call issues.
+- CI must fail on new private-member usage without allowlist exemptions.
+
+**Implementation steps**
+1. Refactor `tests/unit/calibration/test_summaries.py` to replace `_CacheFacadeFake` and `_ExplainerLike` with public API mocks or standard test fixtures.
+2. Refactor `tests/unit/core/test_config_helpers.py` to replace `_orig_undo` with public API usage or appropriate mocking.
+3. Run `scripts/detect_test_anti_patterns.py` and verify 0 violations.
+4. Update any related test utilities to public helpers if needed, per anti-pattern remediation guidance.
+5. Adjust CI configuration (e.g., in `.github/workflows/` or `Makefile`) to run `scripts/detect_test_anti_patterns.py` and fail the build if any private helper calls are detected in new or modified tests.
+6. Ensure the CI check uses a baseline or allowlist to ignore existing legacy violations, but enforce zero new violations.
+
+**Verification checklist**
+- `scripts/detect_test_anti_patterns.py` passes with 0 private helper call findings.
+- All affected tests still pass and maintain behavioral coverage.
+- No regressions in CI anti-pattern scans.
+- CI fails on pull requests that introduce new private-member usage in tests.
