feat: add ADR-031 for calibrator serialization and state persistence; update related ADR status notes and v0.10.2 plan with new tasks for plugin diagnostics and trust enforcement

--- a/docs/improvement/v0.10.2_plan.md
+++ b/docs/improvement/v0.10.2_plan.md
@@ -705,3 +705,113 @@ regressions, per the remediation plan.
 - All affected tests still pass and maintain behavioral coverage.
 - No regressions in CI anti-pattern scans.
 - CI fails on pull requests that introduce new private-member usage in tests.
+
+---
+
+## 12) Plugin discovery report + CLI diagnostics
+
+**Goal:** Provide structured discovery diagnostics for accepted/skipped plugins and
+expose those details via CLI commands.
+
+**Implementation steps**
+1. Add a `PluginDiscoveryReport` structure to the registry that tracks:
+   - accepted plugins,
+   - skipped_untrusted plugins,
+   - skipped_denied plugins, and
+   - checksum or signature verification failures.
+2. Persist the report on the registry/manager and add an API helper
+   (`plugins.get_discovery_report()` or equivalent) that returns it.
+3. Add CLI output for `ce.plugins report` and extend
+   `ce.plugins list --include-skipped` to show skip reasons.
+4. Add tests for the API and CLI output formatting.
+
+**Verification checklist**
+- Discovery reports include accepted and skipped entries with reasons.
+- CLI commands expose the report and skip reasons.
+- Unit tests verify the report contents and CLI output.
+
+---
+
+## 13) Pyproject trusted allowlist + packaging guidance
+
+**Goal:** Implement the ADR-006 Decision B allowlist in pyproject and document
+the trust workflow for plugin packaging.
+
+**Implementation steps**
+1. Add configuration parsing for
+   `[tool.calibrated_explanations.plugins].trusted = ["..."]`.
+2. Apply precedence rules between explicit trust calls, environment variables,
+   and pyproject to ensure deterministic trust selection.
+3. Add docs for the pyproject configuration plus an example snippet and trust
+   workflow guidance in `docs/plugins.md`.
+4. Add tests that validate allowlisted plugins are trusted while other
+   third-party plugins remain untrusted.
+
+**Verification checklist**
+- Allowlisted plugins are trusted via pyproject config.
+- Non-allowlisted plugins remain untrusted by default.
+- Documentation includes a pyproject example and trust workflow notes.
+
+---
+
+## 14) Parity reference harness + canonical fixtures
+
+**Goal:** Add canonical OSS parity fixtures and a helper that produces structured
+diffs for deterministic verification.
+
+**Implementation steps**
+1. Add `tests/parity_reference/` with:
+   - a small canonical dataset,
+   - golden outputs for factual, alternatives, fast, and predictions, and
+   - a `run_parity_reference.py` harness for local/CI use.
+2. Implement `parity_compare` helper in `src/calibrated_explanations/testing/`
+   to compare nested dicts/arrays with configurable tolerances.
+3. Add a dedicated CI job that runs the parity harness against the fixtures.
+4. Update Standard-003 or testing docs to reference the parity harness as the
+   canonical regression gate.
+
+**Verification checklist**
+- Parity harness passes with canonical fixtures.
+- `parity_compare` unit tests cover nested structures and float tolerances.
+- CI job runs the parity harness successfully.
+
+---
+
+## 15) Plugin trust enforcement + FAST plugin guarantees
+
+**Goal:** Ensure in-tree FAST explanation plugin registration is always
+available and trusted-only resolution is the default.
+
+**Implementation steps**
+1. Confirm the in-tree FAST explanation plugin is registered by default and
+   add a smoke test verifying `core.explanation.fast` is present.
+2. Enforce trusted-only resolution for explanation plugins unless explicitly
+   overridden; emit warnings when untrusted plugins are forced.
+3. Align environment variable names with ADR-015 and update CLI help strings
+   accordingly.
+
+**Verification checklist**
+- FAST explanation plugin is always registered in core installs.
+- Trusted-only resolution is enforced with clear warning messaging.
+- Env var overrides are documented and tested.
+
+---
+
+## 16) Documentation updates for plugin trust and diagnostics
+
+**Goal:** Ensure plugin documentation reflects ADR-006/ADR-013/ADR-015 updates
+and warns about in-process execution.
+
+**Implementation steps**
+1. Update `docs/plugins.md` to include:
+   - the pyproject trust allowlist example,
+   - discovery report CLI usage,
+   - interval validation CLI usage, and
+   - an explicit warning about in-process, non-sandboxed execution.
+2. Link relevant ADRs (ADR-006, ADR-013, ADR-015, ADR-026) from the plugin docs.
+3. Add documentation snippets to the docs test suite if applicable.
+
+**Verification checklist**
+- Docs clearly explain trust controls, diagnostics, and sandbox limitations.
+- ADR links are present and accurate.
+- Doc snippets compile in docs build tests.
