--- a/notebooks/demo_reject_fixed.ipynb
+++ b/notebooks/demo_reject_fixed.ipynb
@@ -31,17 +31,19 @@
     "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "# ensure local src on path\n",
     "repo_root = Path.cwd()\n",
-    "if not (repo_root / 'src' / 'calibrated_explanations').exists():\n",
-    "    if (repo_root.parent / 'src' / 'calibrated_explanations').exists():\n",
+    "if not (repo_root / \"src\" / \"calibrated_explanations\").exists():\n",
+    "    if (repo_root.parent / \"src\" / \"calibrated_explanations\").exists():\n",
     "        repo_root = repo_root.parent\n",
-    "src_path = str(repo_root / 'src')\n",
+    "src_path = str(repo_root / \"src\")\n",
     "if src_path not in sys.path:\n",
     "    sys.path.insert(0, src_path)\n",
     "import calibrated_explanations as ce_pkg\n",
     "from calibrated_explanations import CalibratedExplainer\n",
-    "print('Imported from:', Path(ce_pkg.__file__).resolve())"
+    "\n",
+    "print(\"Imported from:\", Path(ce_pkg.__file__).resolve())"
    ]
   },
   {
@@ -65,7 +67,9 @@
     "# Data and model\n",
     "X, y = load_breast_cancer(return_X_y=True)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "X_proper, X_cal, y_proper, y_cal = train_test_split(X_train, y_train, test_size=0.25, random_state=42)\n",
+    "X_proper, X_cal, y_proper, y_cal = train_test_split(\n",
+    "    X_train, y_train, test_size=0.25, random_state=42\n",
+    ")\n",
     "model = RandomForestClassifier(n_estimators=10, random_state=42)\n",
     "model.fit(X_proper, y_proper)\n",
     "ce = CalibratedExplainer(model, X_cal, y_cal)\n",
@@ -81,23 +85,23 @@
    "source": [
     "# Helper summarizer tuned for explain_factual outputs\n",
     "def _summarize_result(result, *, label: str):\n",
-    "    is_reject_result = hasattr(result, 'policy') and hasattr(result, 'rejected')\n",
-    "    print('\\n---', label, '---')\n",
-    "    print('type:', type(result))\n",
+    "    is_reject_result = hasattr(result, \"policy\") and hasattr(result, \"rejected\")\n",
+    "    print(\"\\n---\", label, \"---\")\n",
+    "    print(\"type:\", type(result))\n",
     "    if not is_reject_result:\n",
-    "        if hasattr(result, '__len__') and not isinstance(result, (str, bytes, dict)):\n",
+    "        if hasattr(result, \"__len__\") and not isinstance(result, (str, bytes, dict)):\n",
     "            try:\n",
-    "                print('len:', len(result))\n",
+    "                print(\"len:\", len(result))\n",
     "                # If this is a CalibratedExplanations collection, count non-None explanations\n",
-    "                expls = getattr(result, 'explanations', None)\n",
+    "                expls = getattr(result, \"explanations\", None)\n",
     "                if expls is not None:\n",
     "                    total = len(expls)\n",
     "                    explained = sum(1 for e in expls if e is not None)\n",
-    "                    print(f'explained_count: {explained} / {total}')\n",
+    "                    print(f\"explained_count: {explained} / {total}\")\n",
     "                else:\n",
     "                    try:\n",
     "                        explained = sum(1 for e in result if e is not None)\n",
-    "                        print(f'explained_count (iter): {explained} / {len(result)}')\n",
+    "                        print(f\"explained_count (iter): {explained} / {len(result)}\")\n",
     "                    except Exception:\n",
     "                        pass\n",
     "            except Exception:\n",
@@ -105,39 +109,39 @@
     "        else:\n",
     "            print(repr(result))\n",
     "        return\n",
-    "    print('policy:', result.policy)\n",
-    "    rejected = getattr(result, 'rejected', None)\n",
+    "    print(\"policy:\", result.policy)\n",
+    "    rejected = getattr(result, \"rejected\", None)\n",
     "    if rejected is not None:\n",
     "        rejected = np.asarray(rejected, dtype=bool)\n",
-    "        print('rejected_count:', int(rejected.sum()), '/', int(rejected.size))\n",
-    "    pred = getattr(result, 'prediction', None)\n",
-    "    print('has_prediction:', pred is not None)\n",
-    "    expl = getattr(result, 'explanation', None)\n",
+    "        print(\"rejected_count:\", int(rejected.sum()), \"/\", int(rejected.size))\n",
+    "    pred = getattr(result, \"prediction\", None)\n",
+    "    print(\"has_prediction:\", pred is not None)\n",
+    "    expl = getattr(result, \"explanation\", None)\n",
     "    if expl is None:\n",
-    "        print('explanation: None')\n",
+    "        print(\"explanation: None\")\n",
     "    else:\n",
-    "        if hasattr(expl, '__len__') and not isinstance(expl, (str, bytes, dict)):\n",
-    "            print('explanations_len:', len(expl))\n",
+    "        if hasattr(expl, \"__len__\") and not isinstance(expl, (str, bytes, dict)):\n",
+    "            print(\"explanations_len:\", len(expl))\n",
     "            for i, e in enumerate(expl):\n",
     "                if i >= 5:\n",
-    "                    print('... (truncated)')\n",
+    "                    print(\"... (truncated)\")\n",
     "                    break\n",
     "                if e is None:\n",
-    "                    print(f' [{i}] None')\n",
+    "                    print(f\" [{i}] None\")\n",
     "                    continue\n",
-    "                if hasattr(e, 'prediction'):\n",
+    "                if hasattr(e, \"prediction\"):\n",
     "                    try:\n",
     "                        p = e.prediction\n",
-    "                        if isinstance(p, dict) and 'predict' in p:\n",
+    "                        if isinstance(p, dict) and \"predict\" in p:\n",
     "                            print(f' [{i}] predict={p[\"predict\"]:.3f}')\n",
     "                        else:\n",
-    "                            print(f' [{i}] prediction_present')\n",
+    "                            print(f\" [{i}] prediction_present\")\n",
     "                    except Exception:\n",
-    "                        print(f' [{i}] prediction (unprintable)')\n",
+    "                        print(f\" [{i}] prediction (unprintable)\")\n",
     "                else:\n",
-    "                    print(f' [{i}] explanation_type={type(e)}')\n",
+    "                    print(f\" [{i}] explanation_type={type(e)}\")\n",
     "        else:\n",
-    "            print('explanation_type:', type(expl))"
+    "            print(\"explanation_type:\", type(expl))"
    ]
   },
   {
@@ -242,6 +246,7 @@
    ],
    "source": [
     "from calibrated_explanations.core.reject.policy import RejectPolicy\n",
+    "\n",
     "POLICIES = [\n",
     "    RejectPolicy.NONE,\n",
     "    RejectPolicy.PREDICT_AND_FLAG,\n",
@@ -253,17 +258,17 @@
     "# Policy-first demo: show predict_internal outputs for each policy\n",
     "for policy in POLICIES:\n",
     "    res = ce.predict_internal(X_test[:4], reject_policy=policy)\n",
-    "    _summarize_result(res, label=f'predict_internal(reject_policy={policy.value})')\n",
+    "    _summarize_result(res, label=f\"predict_internal(reject_policy={policy.value})\")\n",
     "\n",
     "# Then show explain_factual with each policy (deterministic plugin off)\n",
     "for policy in POLICIES:\n",
     "    res = ce.explain_factual(X_test[:4], reject_policy=policy, _use_plugin=False)\n",
-    "    _summarize_result(res, label=f'explain_factual(reject_policy={policy.value})')\n",
+    "    _summarize_result(res, label=f\"explain_factual(reject_policy={policy.value})\")\n",
     "\n",
     "# Show explainer-level default policy behaviour\n",
     "ce.default_reject_policy = RejectPolicy.EXPLAIN_REJECTS\n",
     "res_def = ce.explain_factual(X_test[:4], _use_plugin=False)\n",
-    "_summarize_result(res_def, label='explain_factual(default_reject_policy=EXPLAIN_REJECTS)')\n",
+    "_summarize_result(res_def, label=\"explain_factual(default_reject_policy=EXPLAIN_REJECTS)\")\n",
     "ce.default_reject_policy = RejectPolicy.NONE"
    ]
   },
@@ -306,19 +311,19 @@
     "# Legacy example using predict_reject\n",
     "rejected_mask, error_rate, reject_rate = ce.predict_reject(X_test, confidence=0.95)\n",
     "rejected_mask = np.asarray(rejected_mask, dtype=bool)\n",
-    "print('Rejected (first 10):', rejected_mask[:10].tolist())\n",
-    "print(f'reject_rate={reject_rate:.3f}, error_rate={error_rate:.3f}')\n",
+    "print(\"Rejected (first 10):\", rejected_mask[:10].tolist())\n",
+    "print(f\"reject_rate={reject_rate:.3f}, error_rate={error_rate:.3f}\")\n",
     "\n",
     "# Triage loop (legacy)\n",
     "for i in range(min(10, len(y_test))):\n",
     "    if rejected_mask[i]:\n",
-    "        print(f'Instance {i}: Rejected - requires human review', end='')\n",
-    "        explanations = ce.explain_factual(X_test[i:i+1], _use_plugin=False)\n",
+    "        print(f\"Instance {i}: Rejected - requires human review\", end=\"\")\n",
+    "        explanations = ce.explain_factual(X_test[i : i + 1], _use_plugin=False)\n",
     "        print(f'  Probability: {explanations[0].prediction[\"predict\"]:.3f}')\n",
     "    else:\n",
-    "        print(f'Instance {i}: Auto-decided - confident prediction', end='')\n",
-    "        pred = ce.predict_proba(X_test[i:i+1])\n",
-    "        print(f'  Probability: {pred[0][1]:.3f}')"
+    "        print(f\"Instance {i}: Auto-decided - confident prediction\", end=\"\")\n",
+    "        pred = ce.predict_proba(X_test[i : i + 1])\n",
+    "        print(f\"  Probability: {pred[0][1]:.3f}\")"
    ]
   }
  ],
