--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -93,9 +93,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys; \n",
-    "sys.path.insert(0, \"/Users/poorna/Downloads/CE-updated/calibrated_explanations/src\"); \n",
-    "#sys.path.insert(0, \"/Users/poorna/Downloads/calibrated_explanations-main/src\"); sys.path.insert(0, \"/Users/poorna/Downloads/calibrated_explanations-main/src\"))"
+    "import sys\n",
+    "\n",
+    "sys.path.insert(0, \"/Users/poorna/Downloads/CE-updated/calibrated_explanations/src\");\n",
+    "# sys.path.insert(0, \"/Users/poorna/Downloads/calibrated_explanations-main/src\"); sys.path.insert(0, \"/Users/poorna/Downloads/calibrated_explanations-main/src\"))"
    ]
   },
   {
@@ -319,7 +320,9 @@
    "outputs": [],
    "source": [
     "alternative_explanations = ce.explore_alternatives(X_test)\n",
-    "alternative_explanation = alternative_explanations[0]  # or alternative_explanations.get_explanation(0)\n",
+    "alternative_explanation = alternative_explanations[\n",
+    "    0\n",
+    "]  # or alternative_explanations.get_explanation(0)\n",
     "alternative = alternative_explanation.get_rules()"
    ]
   },
