--- a/notebooks/fast_feature_filtering_demo.ipynb
+++ b/notebooks/fast_feature_filtering_demo.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7fb27b941602401d91542211134fc71a",
    "metadata": {},
    "source": [
     "# FAST-based feature filtering demo\n",
@@ -57,7 +58,7 @@
     "from calibrated_explanations import WrapCalibratedExplainer, __version__\n",
     "from calibrated_explanations.api.config import ExplainerBuilder\n",
     "\n",
-    "print(f\"Using calibrated_explanations version: {__version__}\")\n"
+    "print(f\"Using calibrated_explanations version: {__version__}\")"
    ]
   },
   {
@@ -505,7 +506,9 @@
     "    random_state=42,\n",
     ")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=50, random_state=42)\n",
-    "X_train_proper, X_cal, y_train_proper, y_cal = train_test_split(X_train, y_train, test_size=200, random_state=42)\n",
+    "X_train_proper, X_cal, y_train_proper, y_cal = train_test_split(\n",
+    "    X_train, y_train, test_size=200, random_state=42\n",
+    ")\n",
     "\n",
     "learner = RandomForestClassifier(n_estimators=50, random_state=42)\n",
     "learner.fit(X_train_proper, y_train_proper)"
@@ -532,8 +535,7 @@
     "# Build an ExplainerConfig with internal feature filtering enabled\n",
     "builder = ExplainerBuilder(learner)\n",
     "config = (\n",
-    "    builder\n",
-    "    .task(\"classification\")\n",
+    "    builder.task(\"classification\")\n",
     "    .perf_parallel(False)  # Disabled parallelism\n",
     "    .perf_feature_filter(True, per_instance_top_k=5)\n",
     "    .build_config()\n",
@@ -901,7 +903,7 @@
     "\n",
     "# Calibrate the explainer (perf cache/parallel + feature filter are wired internally)\n",
     "wrapper_all.calibrate(X_cal, y_cal)\n",
-    "explainer = wrapper_all.explainer\n"
+    "explainer = wrapper_all.explainer"
    ]
   },
   {
