--- a/notebooks/quickstart_tiny.ipynb
+++ b/notebooks/quickstart_tiny.ipynb
@@ -42,6 +42,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from calibrated_explanations import CalibratedExplainer, __version__\n",
+    "\n",
     "print(\"Calibrated Explanations version:\", __version__)"
    ]
   },
@@ -55,7 +56,9 @@
     "# Load and prepare data\n",
     "X, y = load_breast_cancer(return_X_y=True)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "X_proper, X_cal, y_proper, y_cal = train_test_split(X_train, y_train, test_size=0.25, random_state=42)"
+    "X_proper, X_cal, y_proper, y_cal = train_test_split(\n",
+    "    X_train, y_train, test_size=0.25, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -545,7 +548,7 @@
     "# Explain one instance\n",
     "explanations = ce.explain_factual(X_test[:1])\n",
     "explanation = explanations.get_explanation(0)\n",
-    "print(\"Prediction:\", explanation.prediction['predict'])"
+    "print(\"Prediction:\", explanation.prediction[\"predict\"])"
    ]
   },
   {
